# Roget-s-Thesaurus-Data-Analysis-Project

./: README.md  average_embeddings.json  classes.json  clusters_dictionary.json  embeddings.json  hash.json  main.py  modern_dictionary.json  modern_dictionary_with_names.json  pyproject.toml  read_save.py  rogets_thesaurus.ipynb  thesaurus.json  thesaurus.txt
.ipynb_checkpoints/: rogets_thesaurus-checkpoint.ipynb
